syntax = "proto3";

option java_package = "com.protobuftest.models.v1";
option java_multiple_files = true;

service UserService{
  rpc FetchUser (UserRequest) returns (UserResponse) {}
}

message UserRequest{
  int32 id = 1;
}

message UserResponse{
  int32 id = 1;
  string firstName = 2;
  string lastName = 3;
  int32 age = 4;
  message Address{
    string country = 1;
    string region = 2;
    string city = 3;
  }
  Address address = 6;
}

